--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
     <name>Dash</name>
 
     <modules>
-        <module>api-gateway</module>
-        <module>config-service</module>
-        <module>discovery-service</module>
-        <module>hystrix-dashboard</module>
-        <module>sleuth-service</module>
+        <module>dash-api-gateway</module>
+        <module>dash-config-service</module>
+        <module>dash-discovery-service</module>
+        <module>dash-hystrix-dashboard</module>
+        <module>dash-sleuth-service</module>
         <module>food-service</module>
         <module>food-ui-service</module>
     </modules>
